--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple flight price checker API with express.js on top of kiwi.com API",
   "main": "build/server.js",
   "scripts": {
-    "start:dev": "nodemon --exec babel-node -- src/main.js",
+    "start:dev": "nodemon --exec babel-node -- src/server.js",
+    "pretest": "eslint .",
     "test": "NODE_ENV=test nyc mocha test/*.spec.js",
     "prestart": "rm -rf build/ && babel src --out-dir build",
     "start": "node build/server.js"
@@ -13,7 +14,9 @@
   "author": "Boubker Boulahdid <boulahdid.boubker@gmail.com>",
   "private": true,
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "luxon": "^1.2.1",
+    "winston": "^3.0.0-rc6"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.49",
@@ -22,6 +25,9 @@
     "@babel/preset-env": "^7.0.0-beta.49",
     "@babel/register": "^7.0.0-beta.49",
     "chai": "^4.1.2",
+    "eslint": "^4.19.1",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-chai-friendly": "^0.4.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
     "nyc": "^12.0.2",
