--- a/.nycrc
+++ b/.nycrc
@@ -14,6 +14,5 @@
   "exclude": [
     "test/"
   ],
-  "reporter": ["text", "html"],
-  "report-dir": "./html-report"
+  "reporter": ["text", "html"]
 }
