--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "A simple flight price checker API with express.js on top of kiwi.com API",
   "main": "build/server.js",
   "scripts": {
-    "start:dev": "nodemon --exec babel-node -- src/server.js",
+    "start:dev": "nodemon --exec babel-node -- src",
     "pretest": "eslint .",
     "test": "NODE_ENV=test nyc mocha test/*.spec.js",
     "prestart": "rm -rf build/ && babel src --out-dir build",
-    "start": "node build/server.js"
+    "start": "node build"
   },
   "repository": "git@github.com:bboulahdid/flight-price-checker-api.git",
   "author": "Boubker Boulahdid <boulahdid.boubker@gmail.com>",
