--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "nodemon --exec babel-node -- src",
     "pretest": "eslint .",
-    "test": "NODE_ENV=test nyc mocha test/*.spec.js",
+    "test": "PORT=3000 NODE_ENV=test nyc mocha test/*.spec.js",
     "prestart": "rm -rf build/ && babel src --out-dir build",
     "start": "node build"
   },
@@ -16,6 +16,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "luxon": "^1.2.1",
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5",
     "winston": "^3.0.0-rc6"
   },
   "devDependencies": {
