--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "nodemon --exec babel-node -- src",
     "pretest": "eslint .",
-    "test": "PORT=3000 NODE_ENV=test nyc mocha test/*.spec.js",
+    "test": "NODE_ENV=test nyc mocha --recursive test/",
     "prestart": "rm -rf build/ && babel src --out-dir build",
     "start": "node build"
   },
