--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "mocha": "^5.2.0",
+    "nock": "^9.3.2",
     "nodemon": "^1.17.5",
     "nyc": "^12.0.2",
     "supertest": "^3.1.0"
