--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Boubker Boulahdid <boulahdid.boubker@gmail.com>",
   "private": true,
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "luxon": "^1.2.1",
     "request": "^2.87.0",
